<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".FragmentReads">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/journal_nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="112dp"
                android:layout_height="112dp"
                android:layout_marginBottom="12dp"
                android:src="@drawable/img_hopeline_ph"
                app:riv_border_color="@color/colorOnLightStroke"
                app:riv_border_width="1dp"
                app:riv_corner_radius="56dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/helplines_hopeline_philippines"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="@color/colorOnLightPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/helplines_telephone"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@color/colorOnLightSecondary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/helplines_cellphone"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@color/colorOnLightSecondary" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/helplines_btn_call"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/helplines_call"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                    app:cornerRadius="24dp"
                    app:icon="@drawable/ic_call"
                    app:iconGravity="textStart"
                    app:iconPadding="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/helplines_btn_message"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/helplines_btn_message"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/helplines_message"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                    app:cornerRadius="24dp"
                    app:icon="@drawable/ic_message"
                    app:iconGravity="textStart"
                    app:iconPadding="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/helplines_btn_call"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:strokeColor="@color/colorOnLightStroke"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="12dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="12dp"
                        android:text="@string/helplines_pap"
                        android:fontFamily="@font/poppins_semibold"
                        android:textColor="@color/colorOnLightPrimary"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="fill_parent"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:background="@color/colorOnLightStroke"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/helplines_btn_link1"
                        android:layout_width="56dp"
                        android:layout_height="fill_parent"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_launch"
                            android:tint="@color/colorAccent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="ContentDescription" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:strokeColor="@color/colorOnLightStroke"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="12dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="12dp"
                        android:text="@string/helplines_ppa"
                        android:fontFamily="@font/poppins_semibold"
                        android:textColor="@color/colorOnLightPrimary"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="fill_parent"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:background="@color/colorOnLightStroke"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/helplines_btn_link2"
                        android:layout_width="56dp"
                        android:layout_height="fill_parent"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_launch"
                            android:tint="@color/colorAccent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="ContentDescription" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/reads_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetStart="0dp"
            app:contentInsetEnd="0dp"
            app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:text="@string/title_helplines"
                android:gravity="center_vertical"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/colorOnLightPrimary"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
            
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>