<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".FragmentJournal">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/journal_nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/journal_btn_create"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/journal_btn_create"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                app:cornerRadius="24dp"
                app:icon="@drawable/ic_add"
                app:iconGravity="textStart">


            </com.google.android.material.button.MaterialButton>

            <LinearLayout
                android:id="@+id/journal_empty_state"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="56dp"
                android:orientation="vertical">

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="360dp"
                    android:layout_height="180dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:scaleType="centerInside"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/empty_journal_animation_on_light" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:text="@string/journal_empty_state_title"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textColor="@color/colorOnLightSecondary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="@string/journal_empty_state_subtitle"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    android:textColor="@color/colorOnLightSecondary" />

            </LinearLayout>

            <include
                layout="@layout/journal_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" />

            <include
                layout="@layout/journal_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" />

            <include
                layout="@layout/journal_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/journal_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetStart="0dp"
            app:contentInsetEnd="0dp"
            app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:text="@string/title_journal"
                android:gravity="center_vertical"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/colorOnLightPrimary"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

        </androidx.appcompat.widget.Toolbar>
        
    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>