<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".FragmentReads">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/journal_nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp">
            
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="240dp"
                style="@style/CardViewDefaultStyle"
                android:layout_marginTop="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/img_stress"
                    android:scaleType="centerCrop"
                    tools:ignore="ContentDescription" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/scrim_dark_to_bottom"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="bottom"
                    android:paddingTop="12dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="4dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reads_read_about"
                        android:textColor="@color/colorOnDarkSecondary"
                        android:fontFamily="@font/poppins"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reads_title_stress"
                        android:textColor="@color/colorOnDarkPrimary"
                        android:fontFamily="@font/poppins_semibold"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="240dp"
                style="@style/CardViewDefaultStyle">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/img_anxiety"
                    android:scaleType="centerCrop"
                    tools:ignore="ContentDescription" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/scrim_dark_to_bottom"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="bottom"
                    android:paddingTop="12dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="4dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reads_read_about"
                        android:textColor="@color/colorOnDarkSecondary"
                        android:fontFamily="@font/poppins"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reads_title_anxiety"
                        android:textColor="@color/colorOnDarkPrimary"
                        android:fontFamily="@font/poppins_semibold"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="240dp"
                style="@style/CardViewDefaultStyle">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/img_depression"
                    android:scaleType="centerCrop"
                    tools:ignore="ContentDescription" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/scrim_dark_to_bottom"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="bottom"
                    android:paddingTop="12dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="4dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reads_read_about"
                        android:textColor="@color/colorOnDarkSecondary"
                        android:fontFamily="@font/poppins"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reads_title_depression"
                        android:textColor="@color/colorOnDarkPrimary"
                        android:fontFamily="@font/poppins_semibold"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/reads_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetStart="0dp"
            app:contentInsetEnd="0dp"
            app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:text="@string/title_reads"
                android:gravity="center_vertical"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/colorOnLightPrimary"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>